# cmakegen

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RELEASE_NOTES.md  conanfile.py  meta.json  metadata.json
cmake/: Antlr4Cpp.cmake  toolchain-mingw64.cmake
docs/: interactive_test_checklist.md
examples/: sample-metadata.json  sample-metadata.yaml
grammar/: ConditionExpr.g4
schema/: scaffold-schema.json
src/: main.cpp
src/config/: config_loader.cpp  config_loader.hpp  config_writer.cpp  config_writer.hpp  resolver.cpp  resolver.hpp
src/copy/: copy_engine.cpp  copy_engine.hpp  filter.cpp  filter.hpp
src/generator/: cmake_generator.cpp  cmake_generator.hpp  conan_generator.cpp  conan_generator.hpp  condition_evaluator.cpp  condition_evaluator.hpp  default_json_generator.cpp  default_json_generator.hpp  preset_generator.cpp  preset_generator.hpp  template_engine.cpp  template_engine.hpp  toolchain_generator.cpp  toolchain_generator.hpp
src/interactive/: add_runner.cpp  add_runner.hpp  condition_parser.cpp  condition_parser.hpp  metadata_builder.cpp  metadata_builder.hpp  prompt_runner.cpp  prompt_runner.hpp  wizard.cpp  wizard.hpp
src/metadata/: env_expander.cpp  env_expander.hpp  parser.cpp  parser.hpp  schema.hpp  validator.cpp  validator.hpp
src/resolver/: git_cloner.cpp  git_cloner.hpp  path_resolver.cpp  path_resolver.hpp
src/util/: executable_path.cpp  executable_path.hpp
templates/: cmake_presets.jinja2  conanfile.jinja2  executable_cmakelists.jinja2  hierarchical_library_cmakelists.jinja2  layer_cmakelists.jinja2  library_cmakelists.jinja2  root_cmakelists.jinja2  toolchain.jinja2  variant_cmakelists.jinja2
templates/cmake/: AddHierarchicalLibrary.cmake
tests/: CMakeLists.txt
tests/e2e/: e2e_test.cpp
tests/e2e/fixtures/: arm_compile_metadata.json.in  full_metadata.json.in  minimal_metadata.json  split_metadata_to_folder.py
tests/e2e/fixtures/dummy_sources/generic_uart/: CMakeLists.txt  uart_generic.c
tests/e2e/fixtures/dummy_sources/include/: lib.h
tests/e2e/fixtures/dummy_sources/src/: lib.c
tests/e2e/fixtures/dummy_sources/stm32_uart/: CMakeLists.txt  uart_stm32.c
tests/e2e/fixtures/minimal_metadata/: cmake_preset.json  project.json
tests/integration/: pipeline_test.cpp
tests/unit/: condition_evaluator_test.cpp  condition_parser_test.cpp  filter_test.cpp  metadata_builder_test.cpp  parser_test.cpp
